--- a/pkgs/@akanjs/store/package.json
+++ b/pkgs/@akanjs/store/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@akanjs/store",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "sourceType": "module",
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
@@ -15,7 +16,7 @@
     "node": ">=20"
   },
   "dependencies": {
-    "react": "19.2.1",
+    "react": "19.2.3",
     "zustand": "^5.0.2"
   },
   "exports": {
