--- a/pkgs/@akanjs/cli/package.json
+++ b/pkgs/@akanjs/cli/package.json
@@ -2,13 +2,14 @@
   "type": "module",
   "sourceType": "module",
   "name": "@akanjs/cli",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "bin": {
     "akan": "esm/index.js"
   },
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
@@ -23,7 +24,7 @@
     "@langchain/core": "^0.3.56",
     "@langchain/deepseek": "^0.0.1",
     "@langchain/openai": "^0.5.10",
-    "@next/bundle-analyzer": "^16.0.7",
+    "@next/bundle-analyzer": "^16.0.10",
     "@trapezedev/project": "^7.1.3",
     "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.7.9",
@@ -42,13 +43,13 @@
     "js-yaml": "^4.1.0",
     "latest-version": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "16.0.7",
+    "next": "16.0.10",
     "next-pwa": "5.6.0",
     "open": "^10.1.1",
     "ora": "^3.4.0",
     "pluralize": "^8.0.0",
     "qrcode": "^1.5.4",
-    "react": "19.2.1",
+    "react": "19.2.3",
     "react-icons": "^5.4.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
