--- a/pkgs/@akanjs/config/package.json
+++ b/pkgs/@akanjs/config/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@akanjs/config",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "sourceType": "module",
   "module": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
@@ -12,10 +13,10 @@
   },
   "dependencies": {
     "@capacitor/cli": "^7.0.0",
-    "@next/bundle-analyzer": "^16.0.7",
+    "@next/bundle-analyzer": "^16.0.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "~22.10.4",
-    "@types/react": "19.2.1",
+    "@types/react": "19.2.3",
     "@types/webpack-env": "^1.18.8",
     "daisyui": "^5.5.5",
     "jest": "^29.7.0",
