--- a/pkgs/@akanjs/next/package.json
+++ b/pkgs/@akanjs/next/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@akanjs/next",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "sourceType": "module",
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
@@ -29,10 +30,10 @@
     "axios": "^1.7.9",
     "cordova-plugin-purchase": "^13.12.1",
     "negotiator": "^1.0.0",
-    "next": "16.0.7",
-    "react": "19.2.1",
+    "next": "16.0.10",
+    "react": "19.2.3",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.3"
   },
   "exports": {
     ".": {
