--- a/pkgs/@akanjs/signal/package.json
+++ b/pkgs/@akanjs/signal/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@akanjs/signal",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "sourceType": "module",
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
@@ -17,7 +18,7 @@
   "dependencies": {
     "@urql/core": "^5.1.0",
     "immer": "^10.1.1",
-    "next": "16.0.7",
+    "next": "16.0.10",
     "reflect-metadata": "^0.2.2",
     "socket.io-client": "^4.8.1"
   },
