--- a/pkgs/@akanjs/ui/package.json
+++ b/pkgs/@akanjs/ui/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@akanjs/ui",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "sourceType": "module",
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
@@ -25,13 +26,13 @@
     "jsonwebtoken": "^9.0.2",
     "lodash-move": "^1.1.1",
     "lodash.clamp": "^4.0.3",
-    "next": "16.0.7",
+    "next": "16.0.10",
     "next-themes": "0.4.4",
-    "react": "19.2.1",
+    "react": "19.2.3",
     "react-copy-to-clipboard": "5.1.0",
     "react-datepicker": "7.5.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.2.1",
+    "react-dom": "19.2.3",
     "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
     "react-simple-pull-to-refresh": "^1.3.3",
