--- a/pkgs/create-akan-workspace/package.json
+++ b/pkgs/create-akan-workspace/package.json
@@ -1,13 +1,15 @@
 {
   "sourceType": "module",
   "name": "create-akan-workspace",
-  "version": "0.9.60-canary.9",
+  "version": "1.0.0",
   "bin": {
     "create-akan-workspace": "cjs/index.js"
   },
   "publishConfig": {
     "access": "public"
   },
+  "homepage": "https://akanjs.com",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/akan-team/akanjs.git",
